--- a/assets/content.css
+++ b/assets/content.css
@@ -123,6 +123,96 @@ aside .related .rt h5 {
   font-size: 15px;
 }
 
+.inmail {
+  margin: 100px auto;
+  padding: 30px;
+  -webkit-box-shadow: 0px -2px 8px rgba(0, 0, 0, 0.05), 0px 2px 8px rgba(0, 0, 0, 0.05);
+          box-shadow: 0px -2px 8px rgba(0, 0, 0, 0.05), 0px 2px 8px rgba(0, 0, 0, 0.05);
+}
+
+.inmail form h3 {
+  font-size: 22px;
+  margin: 20px 0;
+}
+
+.inmail form input {
+  width: 100%;
+}
+
+.inmail form button {
+  max-width: 150px;
+  height: 50px;
+  width: 100%;
+  background-color: var(--logo);
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 18px;
+  border: 0;
+  border-radius: 5px;
+}
+
+.password_parent {
+  border: 2px solid #ddd;
+  border-radius: 5px;
+  margin: 30px 0;
+  height: 50px;
+  width: 100%;
+  position: relative;
+  background-color: transparent;
+}
+
+input {
+  width: 90%;
+  padding: 15px;
+  border: 0;
+  height: 45px;
+  font-size: 16px;
+  outline: 0;
+  background-color: transparent;
+}
+
+.password_parent label {
+  position: absolute;
+  left: 15px;
+  z-index: -2;
+  top: 15px;
+  -webkit-transition: top 0.4s;
+  transition: top 0.4s;
+}
+
+input:focus ~ label {
+  top: -15px;
+  color: #333333;
+  background-color: white;
+  padding: 5px;
+  z-index: 2;
+}
+
+input:focus {
+  background-color: transparent;
+  z-index: 2;
+}
+
+input:focus::-webkit-input-placeholder {
+  color: transparent;
+}
+
+input:focus:-ms-input-placeholder {
+  color: transparent;
+}
+
+input:focus::-ms-input-placeholder {
+  color: transparent;
+}
+
+input:focus::placeholder {
+  color: transparent;
+}
+
+input:valid {
+  background-color: #ffffff;
+}
+
 .icon {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -183,89 +273,6 @@ aside .related .rt h5 {
 .profile .cover_pic img {
   width: 100%;
   height: 250px;
-}
-
-.profile .edit button {
-  width: 100px;
-  height: 40px;
-  cursor: pointer;
-  background-color: var(--logo);
-  color: #ffffff;
-  font-weight: 600;
-  font-size: 16px;
-  margin-top: 20px;
-  border-radius: 5px;
-  border: 0;
-  float: right;
-}
-
-.profile .edit .bio {
-  position: relative;
-}
-
-.profile .edit .bio img {
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  position: relative;
-  margin-top: -50px;
-}
-
-.profile .edit .bio label {
-  background-color: teal;
-  height: 30px;
-  width: 30px;
-  color: #ffffff;
-  position: absolute;
-  font-size: 22px;
-  font-weight: 700;
-  text-align: center;
-  border-radius: 50%;
-  top: 80px;
-  cursor: pointer;
-  left: 100px;
-}
-
-.profile .edit .bio .b_text {
-  margin-bottom: 80px;
-}
-
-.profile .edit .bio .b_text h2 {
-  margin: 10px 0;
-}
-
-.profile .edit .bio .b_text p {
-  margin: 0;
-  font-size: 16px;
-}
-
-.profile .edit .bio .b_text input {
-  width: 100%;
-  height: 50px;
-  margin: 15px 0;
-  padding: 15px;
-}
-
-.profile .edit .bio .b_text textarea {
-  width: 100%;
-  height: 150px;
-  margin: 15px 0;
-  padding: 15px;
-}
-
-.profile .edit .bio .b_text button {
-  font-size: 16px;
-  float: left;
-  width: auto;
-  color: #333333;
-  background-color: transparent;
-  font-weight: 600;
-  line-height: 25px;
-  margin: 20px 0;
-  padding: 5px 30px;
-  text-align: center;
-  border: 2px solid #333333;
-  letter-spacing: 0.02em;
 }
 
 .profile .all_post {
