--- a/assets/content.scss
+++ b/assets/content.scss
@@ -110,6 +110,94 @@ aside {
   }
 }
 
+.inmail {
+  margin: 100px auto;
+
+  padding: 30px;
+  box-shadow: 0px -2px 8px rgba(0, 0, 0, 0.05), 0px 2px 8px rgba(0, 0, 0, 0.05);
+  form {
+    h3 {
+      font-size: 22px;
+      margin: 20px 0;
+    }
+    input {
+      width: 100%;
+    }
+
+    button {
+      max-width: 150px;
+      height: 50px;
+      width: 100%;
+      background-color: var(--logo);
+      color: #ffffff;
+      font-weight: 700;
+      font-size: 18px;
+      border: 0;
+      border-radius: 5px;
+    }
+  }
+}
+
+.password_parent {
+  border: 2px solid #ddd;
+  border-radius: 5px;
+  margin: 30px 0;
+  height: 50px;
+  width: 100%;
+  position: relative;
+  background-color: transparent;
+}
+// .overlay {
+//   background-color: rgba(99, 99, 99, 0.2);
+//   height: 100%;
+//   width: 100%;
+//   top: 0;
+//   //   display: none;
+//   align-items: center;
+//   justify-content: center;
+
+//   position: absolute;
+//   .error_card {
+//     margin: 150px auto;
+//     background-color: #ffffff;
+//     width: 80%;
+//     height: 400px;
+//   }
+// }
+
+input {
+  width: 90%;
+  padding: 15px;
+  border: 0;
+  height: 45px;
+  font-size: 16px;
+  outline: 0;
+  background-color: transparent;
+}
+.password_parent label {
+  position: absolute;
+  left: 15px;
+  z-index: -2;
+  top: 15px;
+  transition: top 0.4s;
+}
+input:focus ~ label {
+  top: -15px;
+  color: #333333;
+  background-color: white;
+  padding: 5px;
+  z-index: 2;
+}
+input:focus {
+  background-color: transparent;
+  z-index: 2;
+}
+input:focus::placeholder {
+  color: transparent;
+}
+input:valid {
+  background-color: #ffffff;
+}
 .icon {
   display: flex;
   .width_c {
@@ -167,87 +255,6 @@ aside {
     img {
       width: 100%;
       height: 250px;
-    }
-    input {
-    }
-  }
-
-  .edit {
-    button {
-      width: 100px;
-      height: 40px;
-      cursor: pointer;
-      background-color: var(--logo);
-      color: #ffffff;
-      font-weight: 600;
-      font-size: 16px;
-      margin-top: 20px;
-      border-radius: 5px;
-      border: 0;
-      float: right;
-    }
-
-    .bio {
-      position: relative;
-      img {
-        width: 150px;
-        height: 150px;
-        border-radius: 50%;
-        position: relative;
-        margin-top: -50px;
-      }
-      label {
-        background-color: teal;
-        height: 30px;
-        width: 30px;
-        color: #ffffff;
-        position: absolute;
-        font-size: 22px;
-        font-weight: 700;
-        text-align: center;
-        border-radius: 50%;
-        top: 80px;
-        cursor: pointer;
-        left: 100px;
-      }
-      .b_text {
-        margin-bottom: 80px;
-        h2 {
-          margin: 10px 0;
-        }
-        p {
-          margin: 0;
-          font-size: 16px;
-        }
-        input {
-          width: 100%;
-          height: 50px;
-          margin: 15px 0;
-          padding: 15px;
-        }
-        textarea {
-          width: 100%;
-          height: 150px;
-          margin: 15px 0;
-          padding: 15px;
-        }
-        button {
-          // font-family: Nunito;
-          font-size: 16px;
-          float: left;
-          width: auto;
-          color: #333333;
-          background-color: transparent;
-          // font-style: normal;
-          font-weight: 600;
-          line-height: 25px;
-          margin: 20px 0;
-          padding: 5px 30px;
-          text-align: center;
-          border: 2px solid #333333;
-          letter-spacing: 0.02em;
-        }
-      }
     }
   }
 
