--- a/assets/style.scss
+++ b/assets/style.scss
@@ -58,6 +58,10 @@ nav {
     li {
       font-size: 16px;
       font-weight: 600;
+      color: #333333;
+      a {
+        color: #333333;
+      }
     }
   }
 
@@ -70,6 +74,10 @@ nav {
     color: var(--primary-color);
     background-color: var(--mini-blue);
     border: 0;
+    margin-right: 20px;
+    a {
+      color: #ffffff;
+    }
   }
 }
 
@@ -327,6 +335,9 @@ footer {
   .ff_content .person .comment .p_person {
     width: 100%;
   }
+  .navbar ul {
+    visibility: none;
+  }
   main {
     display: flex;
     justify-content: space-between;
@@ -350,6 +361,11 @@ footer {
       margin-top: 230px;
       height: 800px;
     }
+  }
+  .inmail {
+    width: 60%;
+    // margin: 0 auto;
+    padding: 50px;
   }
   .copyr {
     display: flex;
@@ -411,6 +427,9 @@ footer {
       width: 70%;
       margin-top: 0px;
     }
+  }
+  .navbar ul {
+    visibility: hidden;
   }
 }
 
