--- a/assets/style.css
+++ b/assets/style.css
@@ -64,6 +64,10 @@ nav {
   margin-right: auto;
 }
 
+.navbar h1 a {
+  color: var(--logo);
+}
+
 .navbar ul {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -93,6 +97,7 @@ nav {
   color: var(--primary-color);
   background-color: var(--mini-blue);
   border: 0;
+  margin-top: 20px;
   margin-right: 20px;
 }
 
@@ -217,6 +222,28 @@ nav {
 
 .main_blog .other_blogs .others {
   margin-bottom: 50px;
+}
+
+.pagination {
+  text-align: center;
+  margin: 20px auto;
+}
+
+.pagination a {
+  color: black;
+  padding: 8px 16px;
+  font-weight: 500;
+  text-decoration: none;
+}
+
+.pagination a.active {
+  background-color: var(--logo);
+  font-weight: 700;
+  color: white;
+}
+
+.pagination a:hover:not(.active) {
+  background-color: #ddd;
 }
 
 hr {
@@ -377,6 +404,10 @@ footer .foot .copyr ul li a img {
   }
   .navbar ul {
     visibility: none;
+  }
+  .navbar button {
+    display: block;
+    margin-top: 0;
   }
   main {
     display: -webkit-box;
